@@ -1,3 +1,7 @@
+2012-09-13  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.16.0 Released.
+
 2012-09-11  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.16.0-rc2 Released.
